# markers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REVIEW_FINDINGS.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/: example.py  real_usage.py  type_check_example.py
src/markers/: __init__.py  _types.py  core.py  descriptors.py  groups.py  groups.pyi  marker.py  marker.pyi  registry.py  registry.pyi
tests/: test_examples.py  test_markers.py
